去掉乱码补丁

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li><a href="calculator_cn.html">锻造计算器</a></li>
         <li><a href="pop_crystal.html">开水晶模拟器</a></li>
         <li><a href="https://docs.qq.com/sheet/DVEJHT29KZ1d6WmZ6">填写邮箱，及时收到安卓更新包</a></li>
-        <li><a href="https://pan.baidu.com/s/1j5uF86XEF8QLgKv4TWM4Tg">安卓乱码补丁（提取码：k08s）</a></li>
+<!--        <li><a href="https://pan.baidu.com/s/1j5uF86XEF8QLgKv4TWM4Tg">安卓乱码补丁（提取码：k08s）</a></li>-->
         <li><a href="longxin.html">《塞伯坦之魂》</a></li>
     </ul>
 
