--- a/5star.html
+++ b/5star.html
@@ -15,7 +15,7 @@
 
 <title>百炼为战五星人物动态</title>
 
-<script src="5star_files/header-attrs-2.13/header-attrs.js"></script>
+<script src="5star_files/header-attrs-2.11/header-attrs.js"></script>
 
 
 
@@ -38,7 +38,7 @@
 <div class="inner">
 <h1 class="title toc-ignore">百炼为战五星人物动态</h1>
 <h3 class="author">公理天城翻译官</h3>
-<h3 class="date">更新时间：2022-04-13</h3>
+<h3 class="date">更新时间：2022-05-04</h3>
 </div>
 </header>
 
@@ -46,43 +46,25 @@
 <div id="TOC" class="toc">
 <div class="inner">
 <ul>
-<li><a href="#五星普通池"><span class="toc-section-number">1</span>
-五星普通池</a>
+<li><a href="#五星普通池"><span class="toc-section-number">1</span> 五星普通池</a>
 <ul>
-<li><a href="#第一波2018年4月6.0版"><span
-class="toc-section-number">1.1</span>
-第一波（2018年4月，6.0版）</a></li>
-<li><a href="#第二波2018年8月7.0版"><span
-class="toc-section-number">1.2</span>
-第二波（2018年8月，7.0版）</a></li>
-<li><a href="#第三波2019年6月20日"><span
-class="toc-section-number">1.3</span> 第三波（2019年6月20日）</a></li>
-<li><a href="#第四波"><span class="toc-section-number">1.4</span>
-第“四”波</a></li>
-<li><a href="#普通池后续人物"><span
-class="toc-section-number">1.5</span> 普通池后续人物</a></li>
+<li><a href="#第一波2018年4月6.0版"><span class="toc-section-number">1.1</span> 第一波（2018年4月，6.0版）</a></li>
+<li><a href="#第二波2018年8月7.0版"><span class="toc-section-number">1.2</span> 第二波（2018年8月，7.0版）</a></li>
+<li><a href="#第三波2019年6月20日"><span class="toc-section-number">1.3</span> 第三波（2019年6月20日）</a></li>
+<li><a href="#第四波"><span class="toc-section-number">1.4</span> 第“四”波</a></li>
+<li><a href="#普通池后续人物"><span class="toc-section-number">1.5</span> 普通池后续人物</a></li>
 </ul></li>
-<li><a href="#通用币人物"><span class="toc-section-number">2</span>
-通用币人物</a>
+<li><a href="#通用币人物"><span class="toc-section-number">2</span> 通用币人物</a>
 <ul>
-<li><a href="#年"><span class="toc-section-number">2.1</span>
-2019年</a></li>
-<li><a href="#年-1"><span class="toc-section-number">2.2</span>
-2020年</a></li>
-<li><a href="#年-2"><span class="toc-section-number">2.3</span>
-2021年</a></li>
-<li><a href="#年-3"><span class="toc-section-number">2.4</span>
-2022年</a></li>
+<li><a href="#年"><span class="toc-section-number">2.1</span> 2019年</a></li>
+<li><a href="#年-1"><span class="toc-section-number">2.2</span> 2020年</a></li>
+<li><a href="#年-2"><span class="toc-section-number">2.3</span> 2021年</a></li>
+<li><a href="#年-3"><span class="toc-section-number">2.4</span> 2022年</a></li>
 </ul></li>
-<li><a href="#世代币人物"><span class="toc-section-number">3</span>
-世代币人物</a></li>
-<li><a href="#野兽币人物"><span class="toc-section-number">4</span>
-野兽币人物</a></li>
-<li><a href="#泰坦碎片巨人碎片商店人物"><span
-class="toc-section-number">5</span>
-泰坦碎片（巨人碎片）商店人物</a></li>
-<li><a href="#独家人物"><span class="toc-section-number">6</span>
-独家人物</a></li>
+<li><a href="#世代币人物"><span class="toc-section-number">3</span> 世代币人物</a></li>
+<li><a href="#野兽币人物"><span class="toc-section-number">4</span> 野兽币人物</a></li>
+<li><a href="#泰坦碎片巨人碎片商店人物"><span class="toc-section-number">5</span> 泰坦碎片（巨人碎片）商店人物</a></li>
+<li><a href="#独家人物"><span class="toc-section-number">6</span> 独家人物</a></li>
 </ul>
 </div>
 </div>
@@ -92,12 +74,12 @@ class="toc-section-number">5</span>
     <section id="main-content">
 <p>目前游戏最高星等为五星，虽然六星听了很久，连T5C火种也因为卡邦的疏忽被玩家买到过，但卡邦貌似已经没有资源来投入做六星的体系，所以五星也许是游戏最终的形态了。</p>
 <p>以下列出五星人物的获取方式演变历程，定期更新。</p>
+<p><em>注：2020年人物逐渐稳定之后，卡邦已经把所有机器人都更新到2~4星的池子中，新人物如挽歌也已经进入了2~4星池，相信后续也会逐步更新，保证五星机器人都能解锁100锻。</em></p>
 <div id="五星普通池" class="section level1" number="1">
 <h1><span class="header-section-number">1</span> 五星普通池</h1>
 <p>一般指五星碎片水晶能开到的机器人。3~5星水晶和5星专属水晶中除了该水晶专属人物，其他5星也在5星普通池中选人。</p>
 <div id="第一波2018年4月6.0版" class="section level2" number="1.1">
-<h2><span class="header-section-number">1.1</span>
-第一波（2018年4月，6.0版）</h2>
+<h2><span class="header-section-number">1.1</span> 第一波（2018年4月，6.0版）</h2>
 <ul>
 <li>碾碎器，猩猩队长</li>
 <li>阿尔茜，漂移</li>
@@ -108,8 +90,7 @@ class="toc-section-number">5</span>
 </ul>
 </div>
 <div id="第二波2018年8月7.0版" class="section level2" number="1.2">
-<h2><span class="header-section-number">1.2</span>
-第二波（2018年8月，7.0版）</h2>
+<h2><span class="header-section-number">1.2</span> 第二波（2018年8月，7.0版）</h2>
 <ul>
 <li>钢锁，斗擎</li>
 <li>热破，碎骨魔</li>
@@ -120,8 +101,7 @@ class="toc-section-number">5</span>
 </ul>
 </div>
 <div id="第三波2019年6月20日" class="section level2" number="1.3">
-<h2><span class="header-section-number">1.3</span>
-第三波（2019年6月20日）</h2>
+<h2><span class="header-section-number">1.3</span> 第三波（2019年6月20日）</h2>
 <ul>
 <li>汽车大师</li>
 <li>雷震</li>
@@ -220,8 +200,8 @@ class="toc-section-number">5</span>
 <p>2月4日的时候，游戏公司又宣布了新的人物：闹翻天、G1铁皮确定，另新的启动画面上出现了一名疑似是补天士的角色。</p>
 <p>闹翻天在2月25日登场。</p>
 <p>G1铁皮在3月31日登场。</p>
-<p>4月12日YouTube的Hasbro
-Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，网友猜测是BW霸王龙。</p>
+<p>4月12日YouTube的Hasbro Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，网友猜测是BW霸王龙。</p>
+<p>5月4日9.1.0更新新封面，不但补天士登场，滑流（Slipstream，一译璇流）也出现了！</p>
 </div>
 </div>
 <div id="世代币人物" class="section level1" number="3">
@@ -239,8 +219,7 @@ Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，
 <p>指2019年12月卡邦针对BW人物举行的活动。总共就6个BW人物（猩猩队长/巨蝎勇士/黄豹/犀牛/黄蜂勇士/恐龙勇士），尽数上架。</p>
 </div>
 <div id="泰坦碎片巨人碎片商店人物" class="section level1" number="5">
-<h1><span class="header-section-number">5</span>
-泰坦碎片（巨人碎片）商店人物</h1>
+<h1><span class="header-section-number">5</span> 泰坦碎片（巨人碎片）商店人物</h1>
 <p>以下人物在泰坦碎片商店可以购得，长期有效。</p>
 <table>
 <thead>
@@ -296,8 +275,8 @@ Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，
 <li>震天尊：更好的能量水晶</li>
 <li>饿鲨S-1000：5星饿鲨水晶小概率开出</li>
 <li>挽歌：在发布时直接明码标价购买：￥648一个五星，没有盲盒套路</li>
-<li>闹翻天：直接氪金648或者通过限时礼包（3000能量块）购买，比较亲民，后续可通过精英传送水晶（3~5星）开出来，可以直接能量块购买，有一周的传送事件竞技场可以获得碎片</li>
-<li>G1铁皮：发布时使用精英要塞水晶（3~5星）搏概率</li>
+<li>闹翻天：直接氪金648或者通过限时礼包（3500能量块）购买，比较亲民，后续可通过精英传送水晶（3~5星）开出来，可以直接能量块购买，有一周的传送事件竞技场可以获得碎片</li>
+<li>G1铁皮：同闹翻天的营销策略完全相同。648￥直接买-开水晶-能量块礼包-专题竞技场开水晶，分阶段满足各类玩家的需求。</li>
 </ul>
 </div>
     </section>
